# auto-ml-agent

./: LICENSE  README.md  config.yaml  pyproject.toml
auto_ml_agent/: __init__.py  cli.py
auto_ml_agent/core/: __init__.py  agent.py  environment.py  executor.py  monitor.py  notifier.py  packager.py  report.py
auto_ml_agent/templates/: __init__.py  base.py  image_classification.py  object_detection.py  text_classification.py
auto_ml_agent/utils/: __init__.py  config.py  io.py  logger.py
