[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-ml-agent"
version = "0.1.0"
description = "AI-powered autonomous ML experiment agent"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "AutoML Agent Team", email = "team@automl-agent.com" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
  "click>=8.0",
  "rich>=13.0",
  "pyyaml>=6.0",
  "jinja2>=3.0",
  "matplotlib>=3.5",
  "scikit-learn>=1.0",
  "requests>=2.28",
  "psutil>=5.9",
]

[project.scripts]
auto-ml = "auto_ml_agent.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["auto_ml_agent*"]
